--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-server.adb:
+	(Accept_Socket_Serialized): Fix minor typo in comment.
+
 2003-09-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.adb:
