--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* sback.adb: 
+	Add routine header box.
+
 2003-09-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* sback.out, ssback.out:
