--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-headers-values.adb:
+	(Next_Value): Could parse Accept-XXXX header lines now.
+
 2003-09-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-status.adb:
