--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-23  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-status.ads:
+	Rename section Socket to Connection.
+
 2003-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-headers-values.adb:
