--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2003-09-23  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* aws-resources-files.adb:
+	Minor reformatting.
+
 	* aws-status.ads:
 	Rename section Socket to Connection.
 
