--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2003-09-24  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-resources-streams-memory.adb:
+	Fix copyright notice.
+
+	* aws-resources-streams-memory.ads:
+	Add some comments, reorder routines.
+	Fix copyright notice.
+
 2003-09-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-resources-streams-memory.ads, aws-resources-streams-memory.adb:
