--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,12 @@
+2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* shutdown.adb:
+	Change port used (was 8080 and 8081 which are common ports).
+
+	* sback.adb, ssback.adb:
+	(Wait_Call): Add entry stopped.
+	Wait 1 second before quitting.
+
 2003-10-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* huge_response.adb:
