--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* readme.txt:
+	Add note about licenses.
+	Add entry for SHA.
+
 2003-10-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* readme.txt:
