--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,10 @@
+2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-net-std__gnat.adb:
+	(Shutdown): Add handler for Constraint_Error. This is continued
+	 work for fix checked-in on 2003-07-15. Again this is really a
+	 workaround.
+
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
