--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,14 @@
+2003-10-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zlib/*.c, zlib/*.h zlib/makefile:
+	Add ZLib C sources.
+
+	* zlib.ads, zlib.adb, zlib-thin.ads, zlib-thin.adb:
+	Add ZLib-Ada sources.
+
+	* readme.txt:
+	Add notes about ZLib and ZLib-Ada sources.
+
 2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* readme.txt:
