--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-response-set.adb:
+	(Cache_Control): Add pragma no-cache when cache-control no-cache
+	 is specified to properly support HTTP/1.0.
+
+	* aws-messages.ads:
+	(Prevent_Cache): New constant.
+
 2003-10-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
