--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(LARGS): Change -L../win32 by -L../lib
+
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
