--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,8 @@
 2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* makefile:
+	(LARGS): Change -L../win32 to -L../lib
+
 	* sessions3.adb:
 	(Server): Fix output to ensure that the order does not depends on
 	 the scheduling.
