--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	($(TOOLS)): Add -L../lib
+
 2003-09-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wsdl2aws.adb:
