--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-resources-streams-memory.ads:
+	Reorder with part.
+
 2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-response-set.adb:
