--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zlib.ads, zlib.adb:
+	(Default_Memory_Level): New constant.
+	(Default_Window_Bits): New constant.
+	(Deflate_Init): Use new constants.
+	(Inflate_Init): Use new constant Default_Window_Bits.
+
 2003-10-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
