--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-04  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* zlib.ads:
+	Fix comment, fix some line ending (DOS style).
+
 2003-10-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* zlib.ads, zlib.adb:
