--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-05  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-resources-streams-memory-zlib.adb:
+	(Append): Add ??? - bug to be fixed, waiting for final discussion
+	 on memory stream design.
+
 2003-10-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-resources-streams-memory-zlib.ads:
