--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-resources-streams-memory-zlib.adb:
+	(Append): Deallocate Buffer access parameter.
+
 2003-10-05  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-resources-streams-zlib.adb:
