--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,13 @@
+2003-10-05  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* zapp.adb:
+	Change Set.Append_Encode by Set.Data_Encoding.
+	Minor reformatting.
+
+	* zbig.adb:
+	Reorder with clauses.
+	Free buffer after last use.
+
 2003-10-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* append.adb:
