--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add zfile.
+
+	* zfile.adb, zfile.out:
+	Initial revision.
+
 2003-10-05  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* zapp.adb:
