--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2003-10-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-utils.adb:
+	(Compress): New routine.
+	(Decompress): New routine.
+	(Compress_Decompress): New routine.
+
+	* aws-utils.ads:
+	(Compress): New routine.
+	(Decompress): New routine.
+
 2003-10-05  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server.ads, aws-server.adb:
