--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-response-set.adb:
+	(Message_Body): Use properly dispatching Append_Body call.
+
 2003-10-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-resources-streams-memory-zlib.ads:
