--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,14 @@
+2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* adains.png.gz:
+	Initial revision. Used by zdemo.
+
+	* makefile:
+	(DEMOS): Add zdemo.
+
+	* zdemo.adb:
+	Initial revision.
+
 2003-10-04  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
