--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* strm.adb, zapp.adb, check_mem.adb:
+	Change references to Content_Encoding type now in AWS.Messages.
+	Fix typo in comment.
+
 2003-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* check_mem.adb:
