--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* zdemo.adb:
+	Removes unused with clauses.
+	
+2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* adains.png.gz:
 	Initial revision. Used by zdemo.
 
